# qmllint-action

./: CMakeLists.txt  README.md  action.yml
.github/workflows/: build-test-install.yml  codeLint.yml  qmllint.yml
examples/: CMakeLists.txt  example1.cpp
examples/qml/: example1.qml
include/: gitHClient.hpp  gitHReviewer.hpp  qmlReviewer.hpp  reviewer.hpp
src/: commenter.cpp  gitHClient.cpp  gitHReviewer.cpp  lintBot.cpp  qmlReviewer.cpp  qmllintBot.cpp  reviewer.cpp  yamltojson.cpp
